change favicon, fix alignment of logo, deactivate dark mode

--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -23,3 +23,8 @@ a {
         text-decoration: none;
     }
 }
+
+ion-title > div {
+    display: flex !important;
+    align-items: center;
+}
